--- a/yagpdb_docker/Dockerfile
+++ b/yagpdb_docker/Dockerfile
@@ -32,12 +32,6 @@ COPY --from=builder /appbuild/yagpdb/cmd/yagpdb/static static/
 
 COPY --from=builder /appbuild/yagpdb/cmd/yagpdb .
 
-# add extra flags here when running YAGPDB
-# Set "-exthttps=true" if using a TLS-enabled proxy such as
-# jrcs/letsencrypt-nginx-proxy-companion
-# Set "-https=false" do disable https
-ENV extra_flags ""
-
 # `exec` allows us to receive shutdown signals.
 # CMD exec /app/yagpdb -all -pa $extra_flags
-CMD exec /app/yagpdb -bot $extra_flags
+CMD ["exec", "/app/yagpdb", "-all"]
